@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-26T08:11:39Z",
+  "timestamp" : "2023-10-26T16:11:14Z",
   "count_outdated" : 1068,
   "uniques_outdated" : 678,
-  "count" : 1104,
+  "count" : 1105,
   "uniques" : 702,
   "clones" : [
     {
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-10-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
