@@ -1,5 +1,5 @@
 {
-  "count": 34,
+  "count": 35,
   "uniques": 4,
   "clones": [
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-10-26T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
