@@ -1,3 +1,12 @@
+2023-10-26T16:11:14Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6656838246 # 1286
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
+* notice: last 14d: unq all: 4 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 678 1068 / 702 1104
+* notice: next accum: outdated-unq outdated-all / unq all: 678 1068 / 702 1105
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2023-10-26]
+
 2023-10-26T08:11:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6651279851 # 1285
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-26
